--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -19,6 +19,8 @@ executable sudoku
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8, split >=0.2 && <0.3, QuickCheck >=2.6 && <2.7
+  build-depends:       base
+                     , split 
+                     , QuickCheck 
   hs-source-dirs:      src
   default-language:    Haskell2010
