--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                sudoku
-version:             0.1.0.0
+version:             0.2.0.0
 -- synopsis:            
 -- description:         
 -- license:             
@@ -21,6 +21,17 @@ executable sudoku
   -- other-extensions:    
   build-depends:       base
                      , split 
-                     , QuickCheck 
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite test-sudoku
+    type:       exitcode-stdio-1.0
+    main-is:    TestSudoku.hs
+    hs-source-dirs: tests, src
+    build-depends: base
+                 , split
+                 , random
+                 , QuickCheck
+                 , test-framework
+                 , test-framework-quickcheck2
+    default-language:    Haskell2010
