--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ cabal.project.local
 cabal.project.local~
 .HTF/
 .ghc.environment.*
-/cabal.project.local~0
-/cabal.project.local~1
+cabal.project*
+*/#*
