--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -8,7 +8,7 @@ version:             0.2.0.0
 -- license:             
 license-file:        LICENSE
 author:              Jim Burton
-maintainer:          j.burton@brighton.ac.uk
+maintainer:          jimburton1@gmail.com
 -- copyright:           
 category:            Game
 build-type:          Simple
